--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,17 +13,21 @@
 			"NODE_VERSION": "lts/*"
 		}
 	},
-	// VS Codeと拡張の設定
-	"settings": {
-		"java.jdt.ls.java.home": "/docker-java-home"
+	"customizations":{
+		"vscode": {
+			// VS Codeと拡張の設定
+			"settings": {
+				"java.jdt.ls.java.home": "/docker-java-home"
+			},
+			// VS Codeに導入する拡張を指定
+			"extensions": [
+				"vscjava.vscode-java-pack",
+				"redhat.fabric8-analytics",
+				"humao.rest-client",
+				"AquaSecurityOfficial.trivy-vulnerability-scanner"
+			]
+		}
 	},
-	// VS Codeに導入する拡張を指定
-	"extensions": [
-		"vscjava.vscode-java-pack",
-		"redhat.fabric8-analytics",
-		"humao.rest-client",
-		"AquaSecurityOfficial.trivy-vulnerability-scanner"
-	],
 	// Dev Containerのユーザ
 	"remoteUser": "vscode",
 	// Dev Containerの追加機能
