--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,48 +1,57 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.231.6/containers/java
 {
-	"name": "Java",
-	"build": {
-		// コンテナビルドで使うDockerfileを指定
-		"dockerfile": "Dockerfile",
-		"args": {
-			// コンテナビルド時に渡す引数を指定
-			"VARIANT": "17-bullseye",
-			"INSTALL_MAVEN": "true",
-			"INSTALL_GRADLE": "false",
-			"NODE_VERSION": "lts/*"
-		}
-	},
-	"customizations":{
-		"vscode": {
-			// VS Codeと拡張の設定
-			"settings": {
-				"java.jdt.ls.java.home": "/docker-java-home"
-			},
-			// VS Codeに導入する拡張を指定
-			"extensions": [
-				"vscjava.vscode-java-pack",
-				"redhat.fabric8-analytics",
-				"humao.rest-client",
-				"AquaSecurityOfficial.trivy-vulnerability-scanner"
-			]
-		}
-	},
-	// Dev Containerのユーザ
-	"remoteUser": "vscode",
-	// Dev Containerの追加機能
-	"features": {
-		"ghcr.io/devcontainers/features/docker-from-docker:1": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/git:1": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/github-cli:1": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/azure-cli:1": {
-			"version": "latest"
-		}
-	}
+  "name": "Java",
+  "build": {
+    // コンテナビルドで使うDockerfileを指定
+    "dockerfile": "Dockerfile",
+    "args": {
+      // コンテナビルド時に渡す引数を指定
+      "VARIANT": "17-bullseye",
+      "INSTALL_MAVEN": "true",
+      "INSTALL_GRADLE": "false",
+      "NODE_VERSION": "lts/*"
+    }
+  },
+
+  "customizations": {
+    "vscode": {
+      // VS Codeと拡張の設定
+      "settings": {
+        "java.jdt.ls.java.home": "/docker-java-home",
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true,
+        // defaultFormatter を指定した場合、それに含まれないタイプは個別で追加が必要
+        "[java]": {
+          "editor.defaultFormatter": "redhat.java"
+        },
+        "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml"
+      },
+      // VS Codeに導入する拡張を指定
+      "extensions": [
+        "vscjava.vscode-java-pack",
+        "redhat.fabric8-analytics",
+        "humao.rest-client",
+        "esbenp.prettier-vscode",
+        "AquaSecurityOfficial.trivy-vulnerability-scanner"
+      ]
+    }
+  },
+  // Dev Containerのユーザ
+  "remoteUser": "vscode",
+  // Dev Containerの追加機能
+  "features": {
+    "ghcr.io/devcontainers/features/docker-from-docker:1": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/git:1": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/github-cli:1": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/azure-cli:1": {
+      "version": "latest"
+    }
+  }
 }
